Bug 210872 - kopete system tray icon doesn't change when status change to "connected"
Summary: kopete system tray icon doesn't change when status change to "connected"
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 211720 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-10-17 12:46 UTC by Jean-Baptiste Rouault
Modified: 2009-11-07 05:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to systemtray.cpp that seems to resolve the above issue (444 bytes, patch)
2009-10-17 12:49 UTC, Jean-Baptiste Rouault
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Rouault 2009-10-17 12:46:11 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

While connecting, kopete uses a system tray icon named "user-connecting" (which doesn't seem to exist ?).
Once connected, it never switches back to the standard kopete icon.
Comment 1 Jean-Baptiste Rouault 2009-10-17 12:49:03 UTC
Created attachment 37633 [details]
Patch to systemtray.cpp that seems to resolve the above issue
Comment 2 Christophe Marin 2009-10-31 11:33:15 UTC
*** Bug 211720 has been marked as a duplicate of this bug. ***
Comment 3 Dan 2009-10-31 21:53:51 UTC
Well, it seems the problem was fixed in a strange way. I just updated to the latest svn and it works. But If I apply the above patch, it also works... so was this patch applied to svn or not?

Anyway, there's a minor new issue now: I have some icons (including Kopete) on the panel. Before I could just click on it and the icon would show on the tray, but now the tray icon will only show if I start Kopete directly from the xterm window (if I start through the icon or through Alt+F2, it will not show on the tray at all).

A new bug?
Comment 4 Jean-Baptiste Rouault 2009-11-01 23:13:30 UTC
Recompiled kopete today, bug is still present. There seems to have been some changes related to the systray in kdelibs, maybe this can explain the odd behaviour you report above Dâniel.
Comment 5 Dan 2009-11-02 00:02:15 UTC
(In reply to comment #4)
> Recompiled kopete today, bug is still present. There seems to have been some
> changes related to the systray in kdelibs, maybe this can explain the odd
> behaviour you report above Dâniel.

I have almost the most recent kdelibs trunk:

fraga@tux ~/svn/kdelibs$ svn up
U    cmake/modules/FindPostgreSQL.cmake
U    interfaces/kimproxy/interface/kcm_instantmessenger.desktop
U    interfaces/ktexteditor/kcm_ktexteditor.desktop
U    kate/document/katedocument.h
svn: Reference to non-existent node 'ce54.6z2s.r1043130/25250' in filesystem '/svn/mirrors/home/kde/db'

Since, none of these changes are related to the systray, I'll keep using the one I installed before until they changed something related...
Comment 6 Dan 2009-11-05 17:42:18 UTC
I updated the kdelibs, kdebase etc and the problem remains... let's wait :)
Comment 7 Raphael Kubo da Costa 2009-11-07 05:07:30 UTC
SVN commit 1046011 by rkcosta:

Fix some remaining bits after the KStatusNotifierItem port from r1025524.

 * We don't use an overlay to generate the grayscale icon anymore.
   Instead, they are now real png files.
 * There's no 'user-connecting' icon, so revert to the old behaviour
   of just showing the offline (grayscale) icon while connecting.
 * When connected, use the default icon again.

BUG: 210872
CCMAIL: davide.bettio@kdemail.net


 AM            hi128-apps-kopete-offline.png  
 AM            hi16-apps-kopete-offline.png  
 AM            hi22-apps-kopete-offline.png  
 AM            hi32-apps-kopete-offline.png  
 AM            hi48-apps-kopete-offline.png  
 AM            hi64-apps-kopete-offline.png  
 M  +6 -7      systemtray.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1046011