Fix some remaining bits after the KStatusNotifierItem port from r1025524.

* We don't use an overlay to generate the grayscale icon anymore.
   Instead, they are now real png files.
 * There's no 'user-connecting' icon, so revert to the old behaviour
   of just showing the offline (grayscale) icon while connecting.
 * When connected, use the default icon again.

BUG: 210872
CCMAIL: davide.bettio@kdemail.net

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1046011